--- a/AppCaso3BasesDeDatos/Web.config
+++ b/AppCaso3BasesDeDatos/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SQLAzureConnection" connectionString="Data Source=dvin0tnlsu.database.windows.net;Initial Catalog=ACME;&#xD;&#xA;  User ID=Caso_Final;Password=Marianne123;&#xD;&#xA;  Encrypt=true;Trusted_Connection=false;"
+    <add name="SQLAzureConnection" connectionString="Data Source=dvin0tnlsu.database.windows.net;Initial Catalog=ACME; User ID=Caso_Final;Password=Marianne123;Encrypt=true;Trusted_Connection=false;"
       providerName="System.Data.SqlClient" />
     <add name="ACMEConnectionString" connectionString="Data Source=dvin0tnlsu.database.windows.net;Initial Catalog=ACME;Integrated Security=False;User ID=Caso_Final;Password=Marianne123;Encrypt=True"
       providerName="System.Data.SqlClient" />
